--- a/projects/jon-components/src/lib/dynamic-form/dynamic-form.component.scss
+++ b/projects/jon-components/src/lib/dynamic-form/dynamic-form.component.scss
@@ -1,40 +1,3 @@
-form {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-auto-rows: 2em;
-    grid-gap: 3.5em;
-    font-family: Arial, Helvetica, sans-serif;
-
-    input {
-        height: 26px;
-        border: 1px solid #c0c0c0;
-        font-size: 1em;
-        padding: 11px;
-    }
-
-    label {
-        font-weight: bold;
-        font-size: 1.2em;
-        margin-right: 20px;
-    }
-
-    select {
-        height: 52px;
-        padding: 11px;
-        font-size: 1em;
-        line-height: 26px;
-        padding: 11px;
-        background-color: #ffffff;
-        border: 1px solid #c0c0c0;
-
-        option: {
-            font-size: 1em;
-            span: {
-                line-height: 30px;
-                padding: 11px;
-                min-height: 30px;
-            }
-        }
-    }
-
+.error {
+    color: red;
 }
